[tool.poetry]
name = "sidewalkify"
version = "0.2.1"
description = "Command line tool and Python library for extrapolating sidewalk lines from annotated streets"
authors = ["Nick Bolten <nbolten@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "7.1.2"
geopandas = "0.3.0"
shapely = "1.7.1"
networkx = "^2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.10.1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
