[tool.poetry]
name = "sidewalkify"
version = "0.2.1"
description = "Command line tool and Python library for extrapolating sidewalk lines from annotated streets"
authors = ["Nick Bolten <nbolten@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
sidewalkify = "sidewalkify.cli:sidewalkify"

[tool.poetry.dependencies]
python = "^3.7.1"
click = "7.1.2"
geopandas = "^0.8.0"
shapely = "1.7.1"
networkx = "^2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.10.1"
pytest = "^6.2.2"
mypy = "^0.910"
types-click = "^7.1.2"

[tool.black]
line-length = 79
exclude = """
(
  setup.py
)
"""

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
